ashu-k8s-manifest/internalbks.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashu-deploy
  name: ashulbinternal
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ashu-deploy
  type: ClusterIP
status:
  loadBalancer: {}
